Plane Tracker Deform - No perspective #37172

Closed
opened 2013-10-21 20:43:33 +02:00 by Beniamino Della Torre · 10 comments

%%%--- Operating System, Graphics card ---
OS X 10.8.5 (12F45)
AMD Radeon HD 6750M 512 MB

- Blender version with error, and version that worked ---

With error: 64bit 2.69 rc2 60761
With error: 64bit 2.69 rc2 60798

- Short description of error ---

Plane track deform node gives a result without any perspective. It's not possible to use it for masking footage with strong perspective. The result is completely fake.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I've found the problem in each use of the node.%%%

%%%--- Operating System, Graphics card --- OS X 10.8.5 (12F45) AMD Radeon HD 6750M 512 MB - Blender version with error, and version that worked --- With error: 64bit 2.69 rc2 60761 With error: 64bit 2.69 rc2 60798 - Short description of error --- Plane track deform node gives a result without any perspective. It's not possible to use it for masking footage with strong perspective. The result is completely fake. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I've found the problem in each use of the node.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Please always attach sample .blend files which demonstrates the issue. For so far i can not see any issues with perspective in plane track, everything works as expected.

%%%

%%%Please always attach sample .blend files which demonstrates the issue. For so far i can not see any issues with perspective in plane track, everything works as expected. %%%

%%%Thank you Sergey, you're right with the attach. I'm sorry for this. The problem is that this .blends needs a video file that is too heavy to attach. So I've deleted the video.%%%

%%%Thank you Sergey, you're right with the attach. I'm sorry for this. The problem is that this .blends needs a video file that is too heavy to attach. So I've deleted the video.%%%

%%%Now there are 3 attachments. The first is the .blend file (there's no video, there's only the image I've linked to the Plane Tracker Deform Node. In the last frames of the animation there's a strong perspective. You can see that the plane texture has no perspective: the height of the colored cells is not correct. The distant cells seems to be vertical rectangles. In the 2 .jpg attachments you can fine the Blender "Plane Tracker Deform" deformation compared to the Photoshop one. Photoshop is correct, there's perspective.
Sorry for my english, thank you for your work, Ben%%%

%%%Now there are 3 attachments. The first is the .blend file (there's no video, there's only the image I've linked to the Plane Tracker Deform Node. In the last frames of the animation there's a strong perspective. You can see that the plane texture has no perspective: the height of the colored cells is not correct. The distant cells seems to be vertical rectangles. In the 2 .jpg attachments you can fine the Blender "Plane Tracker Deform" deformation compared to the Photoshop one. Photoshop is correct, there's perspective. Sorry for my english, thank you for your work, Ben%%%

This issue was referenced by blender/blender-addons-contrib@06c86e7722

This issue was referenced by blender/blender-addons-contrib@06c86e7722b7d88c9e0a0746c234a028a711e3fa

This issue was referenced by 06c86e7722

This issue was referenced by 06c86e7722b7d88c9e0a0746c234a028a711e3fa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 06c86e7722.

Closed by commit 06c86e7722.

Solved now. Took a while due to our git migration but should work fine now. Thanks for the report!

Solved now. Took a while due to our git migration but should work fine now. Thanks for the report!

Thank you, I'v tested now the solved bug on Blender 98bf859. The bug is fixed, great job!

Thank you, I'v tested now the solved bug on Blender 98bf859. The bug is fixed, great job!
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#37172
No description provided.